<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/titleBarForAddNote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/addNoteTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_note_title"
            android:textSize="17dp" />

        <Button
            android:id="@+id/saveNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/save_note" />
    </RelativeLayout>

    <EditText
        android:id="@+id/noteSubjectET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBarForAddNote"
        android:layout_margin="10dp"
        android:hint="@string/hint_note_subject" />

    <EditText
        android:id="@+id/noteDetailET"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/noteSubjectET"
        android:layout_margin="10dp"
        android:hint="@string/hint_note_detail"
        android:maxLines="8" />

</RelativeLayout>